syntax = "proto3";

option csharp_namespace = "CSharpier.Proto";

package proto;

service CSharpierService
{
    rpc FormatFile(FormatFileDto) returns (FormatFileResult) {}
}

message FormatFileDto
{
    string FileContents = 1;
    string FileName = 2;
}

message FormatFileResult
{
    string FormattedFile = 1;
}